# Notion2GoogleTasks

./: .env_template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Quickstart.md  README.md  TODO.md  flowchart-V1.md  flowchart-V2.md  flowchart.md  main.py  pyproject.toml  source.sh  temp.sh
.github/: issue_template.md
.github/instructions/: python.instructions.md
.github/workflows/: label-check.yml  sync_notion_page_webhook.yml  sync_notion_to_google.yml  validate-PR.yml  versioning.yml
services/free_sms_alert/: main.py
services/google-task/config/: config_creds.py
services/google-task/src/: retrieve_tasks.py
services/google_task/: README.md
services/google_task/config/: config_creds.py
services/google_task/src/: authentification.py  retrieve_tasks.py  utilis.py
services/notion/: README.md
services/notion/config/: .env_template  query_payload.json
services/notion/iac/: .env_template  .gitignore  README.md  build.sh  lambda.tf  main.tf  outputs.tf  requirements.txt  ssm.tf  terraform.tfvars.example  (+2 more)
services/sync_notion_google_task/: main.py
tests/: README.md  test_google_tasks_manager.py  test_google_tasks_manager_integration.py  test_notion_client.py
tests/integration/: test_alert_sms_integration.py  test_google_tasks_manager_integration.py  test_notion_client_integration.py  test_notion_to_google_syncer_integration.py
tests/unit/: test_alert_sms_free.py  test_google_tasks_manager.py  test_notion_client.py  test_notion_to_google_syncer.py
utilis/: export_env_with_last_sync.sh  retrieve_last_sucessfull_run.sh  source_env.sh
(+2 files in other folders)
