[tool.poetry]
name = "notion-sync"
version = "1.0.0"
description = "A Python project for syncing tasks between Notion and Google Tasks."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/MarcChen/Notion2GoogleTasks"
readme = "README.md"
packages = [
    { include = "services" }
]


[tool.poetry.dependencies]
python = "^3.9 || ^3.10"
google-auth = "^2.37.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.155.0"
pytest = "^8.3.4"
rich = "^12.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
